Adding sample page

--- a/public/gcweb/samples/index-fr.html
+++ b/public/gcweb/samples/index-fr.html
@@ -86,6 +86,7 @@
 				<li><a href="custom-menu-fr.html">Menu personnalisé</a></li>
                 <li><a href="custom-footer-fr.html">Pied de page personnalisé</a></li>
                 <li><a href="custom-search-fr.html">Recherche personnalisée</a></li>
+                <li><a href="info-banner-fr.html">Bannière d'information</a></li>
                 <li><a href="signin-fr.html">Ouvrir une session</a></li>
                 <li><a href="signout-fr.html">Fermer la session</a></li>
                 <li><a href="settings-fr.html">Paramètres</a></li>
