Adding redesigned footer

--- a/public/gcweb/samples/index-fr.html
+++ b/public/gcweb/samples/index-fr.html
@@ -71,6 +71,7 @@
 				<li><a href="breadcrumbs-fr.html">Fil d’Ariane</a></li>
                 <li><a href="contactlinks-fr.html">Lien de contact</a></li>
                 <li><a href="content-fr.html">Contenu (guide de style)</a></li>
+                <li><a href="footer-fr.html">Pied de page</a></li>
 				<li><a href="exitscript-fr.html">Quitter un site sécurisé</a></li>
                 <li><a href="feedback-and-share-fr.html">Commentaires et partage</a></li>
                 <li><a href="jquery-fr.html">Chargement de jQuery</a></li>
