--- a/public/gcweb/samples/index.html
+++ b/public/gcweb/samples/index.html
@@ -71,6 +71,7 @@
 				<li><a href="breadcrumbs-en.html">Breadcrumbs</a></li>
                 <li><a href="contactlinks-en.html">Contact Links</a></li>
                 <li><a href="content-en.html">Content (style guide)</a></li>
+                <li><a href="footer-en.html">Footer</a></li>
 				<li><a href="exitscript-en.html">Leaving a Secure Site</a></li>
                 <li><a href="feedback-and-share-en.html">Feedback and Share</a></li>
                 <li><a href="jquery-en.html">Loading jQuery</a></li>
