Few minor fixes

--- a/public/gcweb/samples/footer-en.html
+++ b/public/gcweb/samples/footer-en.html
@@ -71,7 +71,7 @@ defFooter.outerHTML = wet.builder.footer({
 ...
     "contextualFooter":{
         "title": "Title",
-        "link": [{
+        "links": [{
             "text": "Link 1",
             "href":"#"
         },
@@ -144,7 +144,7 @@ defFooter.outerHTML = wet.builder.footer({
 				"cdnEnv": "esdcprod",
 				"contextualFooter":{
                     "title": "Title",
-                    "link": [{
+                    "links": [{
                         "text": "Link 1",
                         "href":"#"
                     },
