--- a/public/gcweb/samples/footer-fr.html
+++ b/public/gcweb/samples/footer-fr.html
@@ -70,7 +70,7 @@ defFooter.outerHTML = wet.builder.footer({
 ...
     "contextualFooter":{
         "title": "Title",
-        "link": [{
+        "links": [{
             "text": "Link 1",
             "href":"#"
         },
@@ -142,7 +142,7 @@ defFooter.outerHTML = wet.builder.footer({
 				"cdnEnv": "esdcprod",
 				"contextualFooter":{
                     "title": "Title",
-                    "link": [{
+                    "links": [{
                         "text": "Link 1",
                         "href":"#"
                     },
