--- a/public/gcweb/samples/transactional-en.html
+++ b/public/gcweb/samples/transactional-en.html
@@ -130,6 +130,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
                 </pre>
             </ul>
             <p>In the <b>footer</b> section:</p>
+            <p><b>Note:</b> To see all the features for the footer, please visit the footer sample page <a href="footer-en.html">here</a>.</p>
             <ul>
                 <li>Hide the content inside the footer</li>
                 <pre>
