--- a/public/gcweb/samples/transactional-fr.html
+++ b/public/gcweb/samples/transactional-fr.html
@@ -130,6 +130,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
                 </pre>
             </ul>
             <p>Dans la section <b>footer</b>:</p>
+            <p><b>Remarque :</b> Pour voir toutes les fonctionnalités du pied de page, veuillez visiter la page d'exemple de pied de page <a href="footer-fr.html">ici</a>.</p>
             <ul>
                 <li>Masquer le contenu à l'intérieur du pied de page</li>
                 <pre>
