Adding CSS changes

--- a/public/gcweb/samples/header-menu-en.html
+++ b/public/gcweb/samples/header-menu-en.html
@@ -63,7 +63,8 @@
                     },
                     {
                         "href": "header-menu-fr.html",
-                        "text": "Link 2"
+                        "text": "Link 2",
+                        "newWindow": true
                     }],
                     "logoutLink": {
                         "href": "#",
@@ -82,6 +83,7 @@
                 <li><code class="wb-prettify">"text"</code>: the text inside the menu</li>
                 <li><code class="wb-prettify">"link":"text"</code>: the text of the link that is displayed</li>
                 <li><code class="wb-prettify">"link":"href"</code>: the url of the link</li>
+                <li><code class="wb-prettify">"link":"newWindow"</code>: open the link in a new window</li>
                 <li><code class="wb-prettify">"logoutLink":"text"</code>: the text of the logout link that is displayed.</li>
                 <li><code class="wb-prettify">"logoutLink":"href"</code>: the url of the logout link</li>
             </ul>
