--- a/public/gcweb/samples/header-menu-fr.html
+++ b/public/gcweb/samples/header-menu-fr.html
@@ -63,7 +63,8 @@
                     },
                     {
                         "href": "header-menu-fr.html",
-                        "text": "Link 2"
+                        "text": "Link 2",
+                        "newWindow": true
                     }],
                     "logoutLink": {
                         "href": "#",
@@ -82,6 +83,7 @@
                 <li><code class="wb-prettify">"text"</code>: le texte à l'intérieur du menu</li>
                 <li><code class="wb-prettify">"link":"text"</code>: le texte du lien affiché</li>
                 <li><code class="wb-prettify">"link":"href"</code>: the url of the link</li>
+                <li><code class="wb-prettify">"link":"newWindow"</code>: ouvrir le lien dans une nouvelle fenêtre</li>
                 <li><code class="wb-prettify">"logoutLink":"text"</code>: l'url du lien</li>
                 <li><code class="wb-prettify">"logoutLink":"href"</code>: l'url du lien de déconnexion</li>
             </ul>
