Fixing sample page

--- a/public/gcweb/samples/header-menu-en.html
+++ b/public/gcweb/samples/header-menu-en.html
@@ -98,7 +98,8 @@ defTop.outerHTML = wet.builder.appTop({
         },
         {
             "href": "custom-menu-fr.html",
-            "text": "Link 2"
+            "text": "Link 2",
+            "newWindow": true
         }],
         "logoutLink": {
             "href": "#",
