--- a/public/gcintranet/samples/contactlinks-fr.html
+++ b/public/gcintranet/samples/contactlinks-fr.html
@@ -60,6 +60,7 @@
             <ul>
                 <li><code class="wb-prettify">text</code>: le texte d'affichage du lien</li>
                 <li><code class="wb-prettify">href</code>: l'url du lien</li>
+                <li><code class="wb-prettify">newWindow</code>: ouvrir le lien pour ouvrir dans une nouvelle fenêtre</li>
             </ul>
             <pre>
 defFooter.outerHTML = wet.builder.footer({
@@ -72,7 +73,8 @@ defFooter.outerHTML = wet.builder.footer({
         "text": "Lien de contact 2"
     }, {
         "href": "#",
-        "text": "Lien de contact 3"
+        "text": "Lien de contact 3",
+        "newWindow": true
     }]
 ...
 });
@@ -107,7 +109,8 @@ defFooter.outerHTML = wet.builder.footer({
 					"text": "Lien de contact 2"
 				}, {
 					"href": "#",
-					"text": "Lien de contact 3"
+					"text": "Lien de contact 3",
+					"newWindow": true
 				}]
 			});
 		</script>
