--- a/public/gcintranet/samples/contactlinks-en.html
+++ b/public/gcintranet/samples/contactlinks-en.html
@@ -74,7 +74,7 @@ defFooter.outerHTML = wet.builder.footer({
     }, {
         "href": "#",
         "text": "Contact Link 3",
-        "newWindow": true,
+        "newWindow": true
     }]
 ...
 });
