Fix footer title

--- a/public/gcweb/samples/footer-fr.html
+++ b/public/gcweb/samples/footer-fr.html
@@ -54,7 +54,7 @@
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-			<h1 property="name" id="wb-cont">Footer</h1>
+			<h1 property="name" id="wb-cont">Pied de page</h1>
 			<p>Depuis la v4.0.47, SGDC implémente la dernière version du pied de page du site fournie par WET.</p>
 			<p>Pour plus d'informations, veuillez consulter la documentation du pied de page WET <a href="https://wet-boew.github.io/GCWeb/sites/footers/footers-fr.html">ici.</a></p>
 			<h2>Bande contextuelle</h2>
